#2223 Minor tidy up